--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,7 +16,9 @@
 
             $.each(data, function(index, task) {
                 var isChecked = task.done ? "checked" : "";
-                var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' + isChecked + '><label>' +
+                var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+                                        ' data-id="' + task.id + '" '+
+                                        isChecked + '><label>' +
                                         task.title +
                                         '</label></div></li>';
                 htmlString += liElement;
@@ -24,6 +26,20 @@
 
             var ulTodos = $('.todo-list');
             ulTodos.html(htmlString);
+
+            $('.toggle').change(function(e) {
+                var itemID = $(e.target).data("id");
+
+                var isItemDone = Boolean($(e.target).is(':checked'));
+
+
+                $.post("/tasks/" +itemID, {
+                    _method: "PUT",
+                    task: {
+                        done: isItemDone
+                    }
+                });
+            });
         });
     });
 </script>
