--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
     <header class="header">
         <h1>todos</h1>
+        <form id="new-form">
+            <input type='text' class="new-todo" />
+        </form>
     </header>
 
     <section class="main">
@@ -11,6 +14,12 @@
 
 <script>
     $(function() {
+        $('#new-form').submit(function(e) {
+            e.preventDefault();
+
+            var text = $('.new-todo').val();
+            console.log(text);
+        });
         // takes a JS-representation of a task and generates HTML with li-tags for it
         function createTaskHTML(task) {
             var isChecked = task.done ? "checked" : "";
